Fix dynamic image too high

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -89,6 +89,7 @@
     width: 100% !important;
     position: relative !important;
     height: auto !important;
+    max-height: 80vh !important;
   }
   /* 🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩 Custom 🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩🡩 */
 }
